allmost final version

--- a/calculator.html
+++ b/calculator.html
@@ -1,43 +1,42 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
-    <link rel="stylesheet" href="css/calculator.css" />
+    <!-- <link rel="stylesheet" href="css/calculator.css" /> -->
   </head>
 
-  <body> -->
-<div class="calk">
-  <div>
-    <div data-previous-operand class="previus-display"></div>
-    <div data-current-operand class="display"></div>
-  </div>
-  <div>
-    <div class="opers">
-      <button data-all-claer class="double-button">AC</button>
-      <button data-delete class="button-oper">DEL</button>
-      <button data-operation class="button-oper">+</button>
-      <button data-number class="button">7</button>
-      <button data-number class="button">8</button>
-      <button data-number class="button">9</button>
-      <button data-operation class="button-oper">-</button>
-      <button data-number class="button">4</button>
-      <button data-number class="button">5</button>
-      <button data-number class="button">6</button>
-      <button data-operation class="button-oper">*</button>
-      <button data-number class="button">1</button>
-      <button data-number class="button">2</button>
-      <button data-number class="button">3</button>
-      <button data-operation class="button-oper">/</button>
-      <button data-number class="button-zero">0</button>
-      <button data-number class="button">.</button>
-
-      <button data-equals class="double-button-eq">=</button>
+  <body>
+    <div class="calc-body">
+      <div class="calk">
+        <div class="all-display">
+          <div data-previous-operand class="previus-display"></div>
+          <div data-current-operand class="display"></div>
+        </div>
+        <div>
+          <div class="opers">
+            <button data-all-claer class="double-button">AC</button>
+            <button data-delete class="button-oper">DEL</button>
+            <button data-operation class="button-oper">+</button>
+            <button data-number class="button">7</button>
+            <button data-number class="button">8</button>
+            <button data-number class="button">9</button>
+            <button data-operation class="button-oper">-</button>
+            <button data-number class="button">4</button>
+            <button data-number class="button">5</button>
+            <button data-number class="button">6</button>
+            <button data-operation class="button-oper">*</button>
+            <button data-number class="button">1</button>
+            <button data-number class="button">2</button>
+            <button data-number class="button">3</button>
+            <button data-operation class="button-oper">/</button>
+            <button data-number class="button-zero">0</button>
+            <button data-number class="button">.</button>
+            <button data-equals class="button-oper">=</button>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
-
-<script src="js/calculator.js"></script>
-<!-- </body>
-</html> -->
+  </body>
+</html>
