--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <link rel="stylesheet" href="css/index.css" />
     <title>Expense Tracker</title>
   </head>
-
   <body>
     <h2>Expense Tracker</h2>
-
     <div class="container">
       <h4>Your Balance</h4>
       <h1 id="balance">$0.00</h1>
@@ -52,7 +50,7 @@
         <button class="btn">Add transaction</button>
       </form>
     </div>
-    <!-- <script src="js/calculator.js"></script> -->
     <script src="js/index.js"></script>
+    <script src="js/calculator.js"></script>
   </body>
 </html>
